2015-03-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ac/synctex.a, am/synctex.am: Reorganize rules for libsynctex.

2014-12-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex.c: Define SYNCTEX_YES as 1, not -1 (for bitfields).

2014-08-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_parser.c: Declare functions with file scope as static.
	* synctex.test (new): Shell script for a simple test.
	* am/synctex.am: Added the new test.

2014-08-04  Sebastian Ramacher  <sramacher@debian.org>

	* synctex_parser.c (_synctex_open): Avoid memory leak,

2014-07-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am: Build libsynctex as possibly shared library.
	  From Sebastian Ramacher <sramacher@debian.org>.

2014-07-22  Khaled Hosny  <khaledhosny@eglug.org>

	* am/synctex.am: Don't apply synctex-e-mem.ch0 to XeTeX, and replace
	synctex-e-rec.ch0 with synctex-xe-rec.ch0, after TeX--XeT removal.
	* synctex-xe-rec.ch0: New file (adapted from synctex-e-rec.ch0).

2014-01-14  Sebastian Ramacher  <sramacher@debian.org>

	* synctex_main.c: Bug fix (segfault).

2013-02-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Simplify SyncTeX change files.
	* synctex-def.ch0, synctex-xe-def.ch0: New files defining
	synctex_field_size (1 or 2) and field access macros.
	* synctex-mem.ch0: Drop synctex_field_size.
	* synctex-rec.ch0, synctex-e-rec.ch0: Use field access macros.
	* synctex-rec.ch1: Drop obsolete explicit field access.
	* synctex-mem.ch1, synctex-xe-rec.ch2, synctex-xe-mem.ch2,
	synctex-e-rec.ch1 (removed): Now obsolete.
	* am/synctex.am: Adapted.

2012-11-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex-rec.ch0: Avoid conflict with xetexdir/xetex.web.

2012-10-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_parser_utils.h: Avoid definition of FALSE and TRUE
	that may cause warnings.	

2012-09-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex_main.c: Define snprintf and getcwd for WIN32.

2012-07-30  Peter Breitenlohner  <peb@mppmu.mpg.de>
